make maps responsive

--- a/find_us.html
+++ b/find_us.html
@@ -90,19 +90,13 @@
 
     <div class="container">
       
-<h2 id="breakfast-and-staging-area">Breakfast and Staging Area</h2>
-<p>The breakfast and staging area is located at Zionsville Meadows.  The Meadows is located at: </p>
-<p><a href="http://goo.gl/maps/7NFTa">675 S 1000 E, Zionsville, IN</a></p>
-<iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?client=safari&amp;oe=UTF-8&amp;ie=UTF8&amp;q=Zionsville+meadows&amp;fb=1&amp;gl=us&amp;hq=meadows&amp;hnear=0x8813557095a85b13:0x70cfba84ddeac50,Zionsville,+IN&amp;cid=0,0,17490054639522833475&amp;t=m&amp;ll=39.946299,-86.278231&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe>
-
+<div class="row"><br><div class="col-lg-12"><br><div class="flex-video widescreen"><br><iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?client=safari&amp;oe=UTF-8&amp;ie=UTF8&amp;q=Zionsville+meadows&amp;fb=1&amp;gl=us&amp;hq=meadows&amp;hnear=0x8813557095a85b13:0x70cfba84ddeac50,Zionsville,+IN&amp;cid=0,0,17490054639522833475&amp;t=m&amp;ll=39.946299,-86.278231&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe><br></div><br></div><br></div>
 
 
 <h2 id="cruzionsville-event-area">CruZionsville Event Area</h2>
 <p>The CruZionsville event will be held in downtown Zionsville in the city lot near 200 Main Street.  </p>
 <p><a href="http://goo.gl/maps/78uyR">200 S Main Street, Zionsville, IN</a></p>
-<iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=200+S+Main+St,+Zionsville,+IN&amp;aq=0&amp;oq=200+S+Main&amp;sll=39.944358,-86.277287&amp;sspn=0.015382,0.021865&amp;gl=us&amp;ie=UTF8&amp;hq=&amp;hnear=200+S+Main+St,+Zionsville,+Indiana+46077&amp;t=m&amp;ll=39.949918,-86.261451&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe>
-
-
+<div class="row"><br><div class="col-lg-12"><br><div class="flex-video widescreen"><br><iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=200+S+Main+St,+Zionsville,+IN&amp;aq=0&amp;oq=200+S+Main&amp;sll=39.944358,-86.277287&amp;sspn=0.015382,0.021865&amp;gl=us&amp;ie=UTF8&amp;hq=&amp;hnear=200+S+Main+St,+Zionsville,+Indiana+46077&amp;t=m&amp;ll=39.949918,-86.261451&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe><br></div><br></div><br></div>
 
 
     </div>
