--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -100,6 +100,14 @@ $(function(){
 
 
 
+<h4 id="part-1-photos-by-anita-perry">Part 1 - Photos by Anita Perry</h4>
+<h4 id="part-2-photos-by-j-scott-hendricks">Part 2 - Photos by J. Scott Hendricks</h4>
+<p><br></p>
+<h4 id="2013-driver-portraits">2013 Driver Portraits</h4>
+<ul>
+<li>Photos by Anita Perry</li>
+<li>Choreography by J. Scott Hendricks</li>
+</ul>
 <hr>
 
 
