--- a/find_us.html
+++ b/find_us.html
@@ -90,6 +90,8 @@
 
     <div class="container">
       
+<h2 id="breakfast-and-staging-area-">Breakfast and Staging Area&lt;</h2>
+<p>The breakfast and staging area is located at Zionsville Meadows.  The Meadows is located at:</p>
 <div class="row"><br><div class="col-lg-12"><br><div class="flex-video widescreen"><br><iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?client=safari&amp;oe=UTF-8&amp;ie=UTF8&amp;q=Zionsville+meadows&amp;fb=1&amp;gl=us&amp;hq=meadows&amp;hnear=0x8813557095a85b13:0x70cfba84ddeac50,Zionsville,+IN&amp;cid=0,0,17490054639522833475&amp;t=m&amp;ll=39.946299,-86.278231&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe><br></div><br></div><br></div>
 
 
