updated alz link

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </button>
 
 	  
-      <a class="navbar-brand visible-lg visible-md visible-xs" style="padding: 5px;" href="#"><img class="img-responsive" src="/user_assets/images/navbar/cruzionsville-text.png"></a>
       <a class="navbar-brand visible-sm" href="#">CruZionsville</a>
+      <a class="navbar-brand visible-lg visible-md visible-xs" style="padding: 5px;" href="#"><img class="img-responsive" style="z-index: 10;" src="/user_assets/images/navbar/cruzionsville-text.png"></a>
       
 
     </div>
@@ -217,7 +217,7 @@
       <h3 id="registration">Registration</h3>
 <p><a href="http://www.cruzionsville.com/registration" target="_blank"><img src="/user_assets/images/buttons/registration.jpg" class="" alt="Registration Image"/></a></p>
 <h3 id="make-a-difference">Make A Difference</h3>
-<p><a href="http://act.alz.org/goto/cruzionsville" target="_blank"><img src="/user_assets/images/buttons/donate.jpg" class="" alt="Donation Image"/></a></p>
+<p><a href="http://act.alz.org/site/TR/Walk2014/IN-GreaterIndiana?team_id=208547&pg=team&fr_id=5097" target="_blank"><img src="/user_assets/images/buttons/donate.jpg" class="" alt="Donation Image"/></a></p>
 <p>Donate now!</p>
 <h3 id="find-us-on-facebook">Find Us On Facebook</h3>
 <p><a href="http://www.facebook.com/CruZionsville" target="_blank"><img src="/user_assets/images/buttons/facebook.jpg" class="" alt="Facebook Image"/></a></p>
