add current-zville to main page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand visible-lg visible-md visible-sm visible-xs" style="padding: 5px;" href="#"><img class="img-responsive" style="z-index: 10;" src="/user_assets/images/navbar/cruzionsville-text.png"></a>
+      <a class="navbar-brand visible-lg visible-md visible-sm visible-xs" style="padding: 5px;" href="#"><img class="img-responsive" src="/user_assets/images/navbar/cruzionsville-text.png"></a>
     </div>
 
 
@@ -242,16 +242,21 @@
   <h3 id="title-sponsers">Title Sponsers</h3>
 <hr>
 
-	<div class="col-md-6">
-		<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block" alt=""/></a>
+	<div class="col-md-4">
+		<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
 	</div>
+  <br>
+  <div class="col-md-4">
+    <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>  
 	<br>
-	<div class="col-md-6">
-		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block" alt=""/></a>
-	</div>
+  <div class="col-md-4">
+    <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
+  </div>
 	<br>
 </div>
 <br>
+
 
     </div>
     
