--- a/sponsors.html
+++ b/sponsors.html
@@ -145,6 +145,7 @@
   </div>
   <br>
   <div class="col-md-4">
+    <a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>
   </div>
   <br>
 </div>
