update Alzheimer's info

--- a/faq.html
+++ b/faq.html
@@ -189,6 +189,10 @@
 <p><em>Yes -- it is a shine and show judging event! We have a list of outstanding celebrity judges including Miss Indiana, Ray Cortopassi from Fox News, Lauren Lowrey from WISH TV as well as Kids Judging and of course the People Choice Award for the car that everyone likes the best!</em></p>
 <p><strong>Will I see different years and models of Porsche cars?</strong></p>
 <p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950&#39;s to the latest 2014 models!</em></p>
+<p><strong>What is Alzheimer&#39;s disease?</strong></p>
+<p>Alzheimer&#39;s disease destroys brain cells and affects a person&#39;s memory, ability to learn, make judgments, communicate, and carry out basic daily activities. Alzheimer’s disease is not a normal part of the aging process. As the 6th leading cause of death in the United States, Alzheimer&#39;s disease is a progressive, fatal disease and currently has no cure. More than 5 million Americans are living with Alzheimer’s disease, including an estimated 100,000 Hoosiers. </p>
+<p><strong>What is the Alzheimer&#39;s Association?</strong></p>
+<p>The Alzheimer’s Association is the world’s leading voluntary health organization in Alzheimer&#39;s care, support and research. Our mission is to eliminate Alzheimer’s disease through the advancement of research, to provide and enhance care and support for all affected, and to reduce the risk of dementia through the promotion of brain health. Our vision is a world without Alzheimer’s®. Visit <a href="http://www.alz.org">www.alz.org</a>/indiana or call 800.272.3900.</p>
 <p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn. Note: times are subject to change.</strong></p>
 
 
