--- a/sponsors.html
+++ b/sponsors.html
@@ -103,16 +103,16 @@
 <div class="row">
 	<div class="col-md-4">
 		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
+    <br>
 	</div>
-	<br>
 	<div class="col-md-4">
 		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
 	</div>
-	<br>
   <div class="col-md-4">
     <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
+    <br>
   </div>
-  <br>
 </div>
 <br>
 <br>
@@ -122,44 +122,107 @@
 <hr>
 
 <div class="row">
-  <div class="col-md-4">
-    <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
-  </div>
-  <br>
-  <div class="col-md-4">
+
+  <div class="col-md-3">
     <a href="https://www.indyducati.com/" target="_blank"><img src="/user_assets/images/sponsors/ducati.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
   </div>
-  <br>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
   </div>
-  <br>
+  <div class="col-md-3">
+    <a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-3">
+    <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
-    <a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>
-  </div>
-  <br>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <a href="http://zionsvillemerchants.com/" target="_blank"><img src="/user_assets/images/sponsors/zma3.png" class="center-block img-responsive" alt=""/></a>
+    <br>
   </div>
-  <br>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>
+    <br>
   </div>
-  <br>
+  <div class="col-md-3">
+    <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
 </div>
 
 <h3> Friends of CruZionsville </h3>
 <hr>
 <div class="row">
-  <ul>
-    <li><a href="http://www.cobblestonegrill.com/"  target="_blank">Cobblestone Grill</a></li>
-    <li><a href="http://ingaspopcorn.com/"  target="_blank">Inga's Popcorn</a></li>
-    <li><a href="http://jonesgreenhouse.com/"  target="_blank">Jones Nursery</a></li>
-    <li><a href="http://sullivanmunce.org/"  target="_blank">Sullivan Munce Museum</a></li>
-  </ul>
-  <br>
+  <div class="col-md-2">
+    <a href="http://www.cobblestonegrill.com/" target="_blank"><img src="/user_assets/images/sponsors/cobblestone.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://ingaspopcorn.com/" target="_blank"><img src="/user_assets/images/sponsors/ingas_popcorn3.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://sullivanmunce.org/" target="_blank"><img src="/user_assets/images/sponsors/sullivanmuncelogo2.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.acepartyandtents.com/" target="_blank"><img src="/user_assets/images/sponsors/AceLogo2.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://jonesgreenhouse.com/" target="_blank"><img src="/user_assets/images/sponsors/jones2.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-2">
+    <a href="http://nikkiblaine.com/" target="_blank"><img src="/user_assets/images/sponsors/nikkiblaine3.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://zionsvillemerchants.com/" target="_blank"><img src="/user_assets/images/sponsors/zma3.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.wrightpcclinic.com/" target="_blank"><img src="/user_assets/images/sponsors/wrightpc.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.bubsburgersandicecream.com/" target="_blank"><img src="/user_assets/images/sponsors/BubsBurgers.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.thescoopmainstreet.com/" target="_blank"><img src="/user_assets/images/sponsors/thescoop.jpeg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://www.greekspizzeria.com/" target="_blank"><img src="/user_assets/images/sponsors/greekspizzeria.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-2">
+    <a href="http://cvartandframe.com/" target="_blank"><img src="/user_assets/images/sponsors/artandframe.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="http://giprinting.net/" target="_blank"><img src="/user_assets/images/sponsors/goodimpressions.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-2">
+    <a href="https://www.facebook.com/pages/The-Friendly-Tavern/185313448158462" target="_blank"><img src="/user_assets/images/sponsors/thefriendly.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
 </div>
 
 
