--- a/index.html
+++ b/index.html
@@ -483,6 +483,11 @@ function mce_success_cb(resp){
     <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
   </div>
 	<br>
+  <hr>
+  <br><br>
+  <div align="center">
+    <h3><em><a href="http://boonecvb.com/"  target="_blank">A special thanks to the Boone County Convention & Visitors Bureau</a></em></h3>
+  </div>
 </div>
 <br>
 
