--- a/sponsors.html
+++ b/sponsors.html
@@ -124,11 +124,7 @@
 <div class="row">
 
   <div class="col-md-3">
-    <a href="https://www.indyducati.com/" target="_blank"><img src="/user_assets/images/sponsors/ducati.jpg" class="center-block img-responsive" alt=""/></a>
-    <br>
-  </div>
-  <div class="col-md-3">
-    <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
+    <a href="http://boonecvb.com/" target="_blank"><img src="/user_assets/images/sponsors/booncounty.png" class="center-block img-responsive" alt=""/></a>
     <br>
   </div>
   <div class="col-md-3">
@@ -139,18 +135,22 @@
     <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
     <br>
   </div>
+  <div class="col-md-3">
+    <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
 </div>
 <div class="row">
   <div class="col-md-3">
-    <a href="http://zionsvillemerchants.com/" target="_blank"><img src="/user_assets/images/sponsors/zma3.png" class="center-block img-responsive" alt=""/></a>
+    <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+  <div class="col-md-3">
+    <a href="https://www.indyducati.com/" target="_blank"><img src="/user_assets/images/sponsors/ducati.jpg" class="center-block img-responsive" alt=""/></a>
     <br>
   </div>
   <div class="col-md-3">
     <a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>
-    <br>
-  </div>
-  <div class="col-md-3">
-    <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
     <br>
   </div>
 </div>
