--- a/sponsors.html
+++ b/sponsors.html
@@ -102,20 +102,20 @@
 <hr>
 
 <br>
-<!--<div class="row">-->
-	<!--<div class="col-md-4">-->
-		<!--<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-	<!--</div>-->
-	<!--<div class="col-md-4">-->
-		<!--<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-	<!--</div>-->
-  <!--<div class="col-md-4">-->
-    <!--<a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-  <!--</div>-->
-<!--</div>-->
+<div class="row">-->
+	<div class="col-md-4">
+		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
+    <br>
+	</div>
+	<div class="col-md-4">
+		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+	</div>
+  <div class="col-md-4">
+    <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
+    <br>
+  </div>
+</div>
 <br>
 <br>
 <br>
@@ -226,10 +226,6 @@
     <!--<br>-->
   <!--</div>-->
 <!--</div>-->
-
-
-
-
 
 
     </div>
