--- a/index.html
+++ b/index.html
@@ -501,24 +501,25 @@ function mce_success_cb(resp){
 
 
 <br>
-<div class="row">
-  <h3 id="title-sponsers">Title Sponsers</h3>
+<div class="row">  <h3 id="title-sponsers">Title Sponsers</h3>
 <hr>
 
-	<div class="col-md-4">
-		<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
-	</div>
-  <br>
-  <div class="col-md-4">
-    <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
-  </div>
-	<br>
-  <div class="col-md-4">
-    <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
-  </div>
-	<br>
+    <div class="col-md-4">
+        <br/>
+    	<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br/>
+        <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br/>
+        <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+<br>
   <hr>
-  <br><br>
+  <br>
+  <br>
   <!-- <div align="center">
     <h3><em><a href="http://boonecvb.com/"  target="_blank">A special thanks to the Boone County Convention & Visitors Bureau</a></em></h3>
   </div> -->
