--- a/sponsors.html
+++ b/sponsors.html
@@ -102,19 +102,19 @@
 <hr>
 
 <br>
-<div class="row">-->
+<div class="row">
 	<div class="col-md-4">
+        <br>
 		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
-    <br>
 	</div>
 	<div class="col-md-4">
+        <br>
 		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
-    <br>
 	</div>
-  <div class="col-md-4">
-    <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
-    <br>
-  </div>
+    <div class="col-md-4">
+      <br>
+      <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
 </div>
 <br>
 <br>
@@ -123,12 +123,12 @@
 <h3> Program Sponsors </h3>
 <hr>
 
-<!--<div class="row">-->
+<div class="row">
 
-  <!--<div class="col-md-3">-->
-    <!--<a href="http://boonecvb.com/" target="_blank"><img src="/user_assets/images/sponsors/booncounty.png" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-  <!--</div>-->
+  <div class="col-md-3">
+    <br>
+    <a href="http://www.pfmautomotive.com/locations/mode/4/4900-w-106th-street-zionsville-in-46077.aspx" target="_blank"><img src="/user_assets/images/sponsors/pfm-tire-logo.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>
   <!--<div class="col-md-3">-->
     <!--<a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>-->
     <!--<br>-->
@@ -141,7 +141,7 @@
     <!--<a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>-->
     <!--<br>-->
   <!--</div>-->
-<!--</div>-->
+</div>
 <!--<div class="row">-->
   <!--<div class="col-md-3">-->
     <!--<a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>-->
@@ -154,8 +154,8 @@
   <!--<div class="col-md-3">-->
     <!--<a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>-->
     <!--<br>-->
-  <!--</div>-->
-<!--</div>-->
+  <!--</div> -->
+</div>
 
 <!--<h3> Friends of CruZionsville </h3>-->
 <!--<hr>-->
