--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
 <p><strong>How about the weather?</strong></p>
 <p><em>It is an outdoor event and it is rain or shine!</em></p>
 <p><strong>What are some of the special activities?</strong></p>
-<p><em>Check out our <a href="http://www.cruzionsville.com/agenda">agenda</a> for all of the exciting Special Activities we have planned for Saturday, June 15th as part of CruZionsville.</em></p>
+<p><em>Check out our <a href="http://www.cruzionsville.com/faq">agenda</a> for all of the exciting Special Activities we have planned for Saturday, June 15th as part of CruZionsville.</em></p>
 <p><strong>What can I do in Zionsville?</strong></p>
 <ul>
 <li><em>Visit the <a href="http://sullivanmunce.org">Sullivan Munce Museum</a> providing materials for Kid’s painting program</em></li>
@@ -129,13 +129,13 @@
 <thead>
 <tr>
 <th style="text-align:right">Time*</th>
-<th>Event </th>
+<th>Event</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:right">8:30 - 10 am</td>
-<td>Cars are staged at The Meadows - 675 S. Ford Road, Zionsville    </td>
+<td>Cars are staged at The Meadows - 675 S. Ford Road, Zionsville</td>
 </tr>
 <tr>
 <td style="text-align:right">10 - 10:30 am</td>
@@ -182,8 +182,8 @@
 <td>CruZionsville ends on Main Street</td>
 </tr>
 <tr>
-<td style="text-align:right">4:45 - 6 pm</td>
-<td>CruZionsville eReception (location in Zionsville to be finalized)</td>
+<td style="text-align:right">3:15 - 6 pm</td>
+<td>CruZionsville Reception at the <a href="http://saltycowboytequileria.com/">Salty Cowboy</a></td>
 </tr>
 </tbody>
 </table>
@@ -192,7 +192,7 @@
 <p><strong>Will I see different years and models of Porsche cars?</strong></p>
 <p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950&#39;s to the latest 2014 models!</em></p>
 <p><strong>What is Alzheimer&#39;s disease?</strong></p>
-<p>Alzheimer&#39;s disease destroys brain cells and affects a person&#39;s memory, ability to learn, make judgments, communicate, and carry out basic daily activities. Alzheimer’s disease is not a normal part of the aging process. As the 6th leading cause of death in the United States, Alzheimer&#39;s disease is a progressive, fatal disease and currently has no cure. More than 5 million Americans are living with Alzheimer’s disease, including an estimated 100,000 Hoosiers. </p>
+<p>Alzheimer&#39;s disease destroys brain cells and affects a person&#39;s memory, ability to learn, make judgments, communicate, and carry out basic daily activities. Alzheimer’s disease is not a normal part of the aging process. As the 6th leading cause of death in the United States, Alzheimer&#39;s disease is a progressive, fatal disease and currently has no cure. More than 5 million Americans are living with Alzheimer’s disease, including an estimated 100,000 Hoosiers.</p>
 <p><strong>What is the Alzheimer&#39;s Association?</strong></p>
 <p>The Alzheimer’s Association is the world’s leading voluntary health organization in Alzheimer&#39;s care, support and research. Our mission is to eliminate Alzheimer’s disease through the advancement of research, to provide and enhance care and support for all affected, and to reduce the risk of dementia through the promotion of brain health. Our vision is a world without Alzheimer’s®. Visit <a href="http://www.alz.org">www.alz.org</a>/indiana or call 800.272.3900.</p>
 <p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn. Note: times are subject to change.</strong></p>
