--- a/find_us.html
+++ b/find_us.html
@@ -97,8 +97,8 @@
     <div class="container">
       
 <h2 id="breakfast-and-staging-area">Breakfast and Staging Area</h2>
-<p>The breakfast and staging area is located at Zionsville Meadows.  The Meadows is located at:</p>
-<div class="row"><br><div class="col-lg-12"><br><div class="flex-video widescreen"><br><iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?client=safari&amp;oe=UTF-8&amp;ie=UTF8&amp;q=Zionsville+meadows&amp;fb=1&amp;gl=us&amp;hq=meadows&amp;hnear=0x8813557095a85b13:0x70cfba84ddeac50,Zionsville,+IN&amp;cid=0,0,17490054639522833475&amp;t=m&amp;ll=39.946299,-86.278231&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe><br></div><br></div><br></div>
+<p>The breakfast and staging area is located at the NE corner of the Boone Village Shopping Center.  It is located at 25 Boone Village, Zionsville, IN 46077:</p>
+<div class="row"><br><div class="col-lg-12"><br><div class="flex-video widescreen"><br><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1529.2884206068145!2d-86.27769735582098!3d39.95085405616893!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f2452e65f1c669b!2sBoone+Village+Shopping+Center!5e0!3m2!1sen!2sus!4v1428784927294" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br></div><br></div><br></div>
 
 
 <h2 id="cruzionsville-event-area">CruZionsville Event Area</h2>
