--- a/sponsors.html
+++ b/sponsors.html
@@ -103,45 +103,144 @@
 
 <br>
 <div class="row">
-	<div class="col-md-4">
-        <br>
-		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
-	</div>
-	<div class="col-md-4">
-        <br>
-		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
-	</div>
     <div class="col-md-4">
-      <br>
-      <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+        <a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br>
+        <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br>
+        <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
 </div>
 <br>
 <br>
 <br>
 <br>
-<h3> Program Sponsors </h3>
+<h3> Level 3 </h3>
 <hr>
 
 <div class="row">
-
-  <div class="col-md-3">
-    <br>
-    <a href="http://www.pfmautomotive.com/locations/mode/4/4900-w-106th-street-zionsville-in-46077.aspx" target="_blank"><img src="/user_assets/images/sponsors/pfm-tire-logo.jpg" class="center-block img-responsive" alt=""/></a>
-  </div>
-  <!--<div class="col-md-3">-->
-    <!--<a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-  <!--</div>-->
-  <!--<div class="col-md-3">-->
-    <!--<a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-  <!--</div>-->
-  <!--<div class="col-md-3">-->
-    <!--<a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>-->
-    <!--<br>-->
-  <!--</div>-->
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://boonecvb.com/" target="_blank"><img src="/user_assets/images/sponsors/booncounty.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <a href="http://www.midwestestatebuyers.com/" target="_blank"><img src="/user_assets/images/sponsors/midwest_estate.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://www.pfmautomotive.com/locations/mode/4/4900-w-106th-street-zionsville-in-46077.aspx" target="_blank"><img src="/user_assets/images/sponsors/pfm-tire-logo.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
 </div>
+<div class="row">
+    <div class="col-md-3">
+        <br>
+        <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+</div>
+<h3> Level 2 </h3>
+<hr>
+<hr>
+
+<div class="row">
+    <div class="col-md-3">
+        <br>
+        <br>
+        <a href="http://ingaspopcorn.com/" target="_blank"><img src="/user_assets/images/sponsors/ingas_popcorn3.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+</div>
+<h3> Level 1 </h3>
+<hr>
+<hr>
+
+<div class="row">
+    <div class="col-md-3">
+        <br>
+        <br>
+        <a href="http://www.thescoopmainstreet.com/" target="_blank"><img src="/user_assets/images/sponsors/thescoop.jpeg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <a href="http://awrswheelrepair.com/indianapolis/" target="_blank"><img src="/user_assets/images/sponsors/alloy_wheel_repair.jpg" class="center-block img-responsive" alt=""/></a>
+        <br>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://sullivanmunce.org/" target="_blank"><img src="/user_assets/images/sponsors/sullivanmuncelogo2.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://clearbraindy.com/" target="_blank"><img src="/user_assets/images/sponsors/clear_bra.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <br>
+        <br>
+        <br>
+        <a href="http://www.artinhandgallery.com/" target="_blank"><img src="/user_assets/images/sponsors/art_in_hand.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-3">
+        <br>
+        <a href="http://ballerinasandbruisers.com/" target="_blank"><img src="/user_assets/images/sponsors/ballerinas_and_bruisers.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+</div>
+
+
+<!-- <div class="col-md-3">-->
+  <!--<a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>-->
+  <!--<br>-->
+<!--</div>-->
+<!--<div class="col-md-3">-->
+  <!--<a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>-->
+  <!--<br>-->
+<!--</div>-->
+<!--<div class="col-md-3">-->
+  <!--<a href="http://luxpremier.com/" target="_blank"><img src="/user_assets/images/sponsors/logolux.png" class="center-block img-responsive" alt=""/></a>-->
+  <!--<br>-->
+<!--</div> -->
 <!--<div class="row">-->
   <!--<div class="col-md-3">-->
     <!--<a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>-->
@@ -155,7 +254,6 @@
     <!--<a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>-->
     <!--<br>-->
   <!--</div> -->
-</div>
 
 <!--<h3> Friends of CruZionsville </h3>-->
 <!--<hr>-->
