--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <br>
 
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-12">
 		<h1 id="join-us-for-cruzionsville-2015-">Join Us for CruZionsville 2015!</h1>
 <hr>
 <h3 id="-save-the-date-cruzionsville-2015-will-be-on-saturday-june-13-2015-cars-parking-on-main-st-at-10-am-till-3pm-we-will-start-taking-registrations-in-late-january-"><em>Save the date! CruZionsville 2015 will be on Saturday, June 13, 2015. Cars parking on Main St at 10 am till 3pm. We will start taking registrations in late January.</em></h3>
@@ -245,14 +245,36 @@
 <p>Motor On,</p>
 <p><em>Stephen Tarr</em></p>
 <p><em>2015 CruZionsville Event Chair</em></p>
-<hr>
-<h3 id="news">NEWS</h3>
-<p>Discounted accommodations are now available <a href="accommodations.html">here.</a></p>
 
-    <br>
-    <a href="http://www.capturemedia.com/2014/cruzionsville0614" target="_blank"><p> Check out the latest CruZionsville insert! (5/27/14)<p></a>
-    <a href="http://www.capturemedia.com/2014/cruzionsville0614" target="_blank"><img src="/user_assets/images/mainPage/cruzInsert.png" class="center-block img-responsive" alt=""/></a>
 	</div>
+</div>
+<div class="row">
+    <h3 id="title-sponsers">Title Sponsers</h3>
+<hr>
+
+    <div class="col-md-4">
+        <br/>
+    	<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br/>
+        <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+    <div class="col-md-4">
+        <br/>
+        <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
+    </div>
+<br>
+  <hr>
+  <br>
+  <br>
+  <!-- <div align="center">
+    <h3><em><a href="http://boonecvb.com/"  target="_blank">A special thanks to the Boone County Convention & Visitors Bureau</a></em></h3>
+  </div> -->
+</div>
+<br>
+<hr>
+<div class="row">
 	<div class="col-md-6">
 		<div class="text-center center-block">
       <h3 id="registration">Registration</h3>
@@ -262,14 +284,31 @@
 <p>Donate now!</p>
 <h3 id="find-us-on-facebook">Find Us On Facebook</h3>
 <p><a href="http://www.facebook.com/CruZionsville" target="_blank"><img src="/user_assets/images/buttons/facebook.jpg" class="" alt="Facebook Image"/></a></p>
-<p>Share with your friends!</p>
-<h3 id="volunteers-needed-">Volunteers Needed!</h3>
-<p><a href="http://cruzionsville.ivolunteer.com/" target="_blank"><img src="/user_assets/images/buttons/volunteer.jpg" class="" alt="Volunteer Image"/></a></p>
-<p><br></p>
+
+		</div>
+    </div>
+    <div class="col-md-6">
+		<div class="text-center center-block">
+      <h3 id="share">Share</h3>
 <p><a href="http://www.facebook.com/sharer/sharer.php?u=https://www.cruzionsville.com" class="zocial facebook">Share on Facebook</a><br><br><br><a href="https://plus.google.com/share?url=https://www.cruzionsville.com" class="zocial googleplus">Share on Google+</a><br><br><br><a href="http://twitter.com/home?status=https://www.cruzionsville.com" class="zocial twitter">Share on Twitter</a><br><br></p>
 <p>Get involved with CruZionsville!</p>
 
 		</div>
+    </div>
+</div>
+
+<hr>
+
+
+
+<div class="row">
+	<div class="col-md-6">
+    <br>
+    <a href="http://www.capturemedia.com/2014/cruzionsville0614" target="_blank"><p> Check out the latest CruZionsville insert! (5/27/14)<p></a>
+    <a href="http://www.capturemedia.com/2014/cruzionsville0614" target="_blank"><img src="/user_assets/images/mainPage/cruzInsert.png" class="center-block img-responsive" alt=""/></a>
+	</div>
+	<div class="col-md-6">
+
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
@@ -498,33 +537,6 @@ function mce_success_cb(resp){
 
   </div>
 </div>
-
-
-<br>
-<div class="row">  <h3 id="title-sponsers">Title Sponsers</h3>
-<hr>
-
-    <div class="col-md-4">
-        <br/>
-    	<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
-    </div>
-    <div class="col-md-4">
-        <br/>
-        <a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
-    </div>
-    <div class="col-md-4">
-        <br/>
-        <a href="http://putnampark.com/theclub/theclub.html" target="_blank"><img src="/user_assets/images/sponsors/the-club.jpg" class="center-block img-responsive" alt=""/></a>
-    </div>
-<br>
-  <hr>
-  <br>
-  <br>
-  <!-- <div align="center">
-    <h3><em><a href="http://boonecvb.com/"  target="_blank">A special thanks to the Boone County Convention & Visitors Bureau</a></em></h3>
-  </div> -->
-</div>
-<br>
 
 
     </div>
