--- a/faq.html
+++ b/faq.html
@@ -183,7 +183,7 @@
 </tr>
 <tr>
 <td style="text-align:right">3:15 - 6 pm</td>
-<td>CruZionsville Reception at the <a href="http://saltycowboytequileria.com/">Salty Cowboy</a></td>
+<td>CruZionsville Reception at the (venue TBD)</td>
 </tr>
 </tbody>
 </table>
