fix sponsor sizes

--- a/sponsors.html
+++ b/sponsors.html
@@ -120,7 +120,7 @@
 <br>
 <br>
 <br>
-<h3> Level 3 </h3>
+<h3> Platinum Sponsors </h3>
 <hr>
 
 <div class="row">
@@ -162,23 +162,23 @@
         <br>
     </div>
 </div>
-<h3> Level 2 </h3>
+<h3> Gold Sponsors </h3>
 <hr>
 <hr>
 
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <a href="http://ingaspopcorn.com/" target="_blank"><img src="/user_assets/images/sponsors/ingas_popcorn3.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <br>
@@ -186,46 +186,47 @@
         <a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img src="/user_assets/images/sponsors/RGJ_logo.png" class="center-block img-responsive" alt=""/></a>
     </div>
 </div>
-<h3> Level 1 </h3>
+<h3> Silver Sponsors </h3>
 <hr>
 <hr>
 
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <a href="http://www.thescoopmainstreet.com/" target="_blank"><img src="/user_assets/images/sponsors/thescoop.jpeg" class="center-block img-responsive" alt=""/></a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <a href="http://awrswheelrepair.com/indianapolis/" target="_blank"><img src="/user_assets/images/sponsors/alloy_wheel_repair.jpg" class="center-block img-responsive" alt=""/></a>
         <br>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <br>
         <a href="http://sullivanmunce.org/" target="_blank"><img src="/user_assets/images/sponsors/sullivanmuncelogo2.png" class="center-block img-responsive" alt=""/></a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <br>
         <a href="http://clearbraindy.com/" target="_blank"><img src="/user_assets/images/sponsors/clear_bra.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <br>
         <br>
         <a href="http://www.artinhandgallery.com/" target="_blank"><img src="/user_assets/images/sponsors/art_in_hand.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
         <br>
         <a href="http://ballerinasandbruisers.com/" target="_blank"><img src="/user_assets/images/sponsors/ballerinas_and_bruisers.jpg" class="center-block img-responsive" alt=""/></a>
     </div>
+</div>
+<div class="row">
+
 </div>
 
 
